--- a/proj2frontend/WebContent/_user/login.html
+++ b/proj2frontend/WebContent/_user/login.html
@@ -5,16 +5,32 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form>
-<table>
-<tr>
-<td>Enter username</td><td><input type="text" ng-model="user.username"></td>
-
-<td>Enter password</td><td><input type="password" ng-model="user.password"></td>
-</tr>
-<tr><td><input type="submit" ng-click="submit()"></td></tr>
-</table>
-
-</form>
+<div class="login">
+		<div class="login-grids">
+			<div class="col-md-6 log">
+					 <h3>Login</h3>
+					 <p>Welcome, please enter the following to continue.</p>
+					 <p>If you have previously Login with us, <a href="#">click here</a></p>
+					 <form>
+						 <h5>User Name:</h5>	
+						 <input type="text" ng-model="user.username">
+						 <h5>Password:</h5>
+						 <input type="password" ng-model="user.password">				
+						 <input type="submit" ng-click="submit()">
+						  
+					 </form>
+					
+			</div>
+			<div class="col-md-6 login-right">
+					<h3>New Registration</h3>
+					<p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
+					<a href="#/register" class="hvr-bounce-to-bottom button">Create An Account</a>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
+<!-- //login-page -->
+		</div>
+	</div>
 </body>
 </html>
