--- a/proj2frontend/WebContent/index.html
+++ b/proj2frontend/WebContent/index.html
@@ -10,7 +10,9 @@
 <link
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
 	rel="stylesheet" />
-
+<link
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+	rel="stylesheet" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -70,8 +72,10 @@
 						  </ul>
 						  <div class="sign-in">
 							<ul>
-								<li><a href="#/login" ng-hide="currentUser.id">login</a>/ </li>
+								<li><a href="#/login" ng-hide="currentUser.id">login / </a></li>
 								<li><a href="#/register" ng-hide="currentUser.id">Register</a> </li>
+								<li><a href="" ng-show="currentUser.id" ng-click="logout()"><span class="fa fa-sign-out">logout</a> </li>
+								
 							</ul>
 							</div>
 						</div><!-- /.navbar-collapse -->
@@ -79,9 +83,18 @@
 				</div>
 	
 			<!-- search-scripts -->
-	
-<!-- //header-bottom -->
-		</div>
+<!-- 			<script src="js/classie.js"></script> -->
+<!-- 			<script src="js/uisearch.js"></script> -->
+<!-- 				<script> 			new UISearch( document.getElementById( 'sb-search' ) );
+<!-- 				</script> -->
+			<!-- //search-scripts -->
+			</div>
+<!-- //header -->
+<!-- header-bottom -->
+	<div class="container">
+		<div ng-view></div>
+
+	</div>
 	</div>
 <!-- //banner-body -->
 <!-- footer -->
@@ -92,7 +105,6 @@
 		<div class="container">
 			<p>© 2016-17. All rights reserved | Design by Sudeep</a></p>
 		</div>
-	</div>
 	</div>
 <!-- //footer -->
 <!-- for bootstrap working -->
