--- a/proj2frontend/WebContent/_job/jobTitles.html
+++ b/proj2frontend/WebContent/_job/jobTitles.html
@@ -11,9 +11,26 @@
 </tr>
 <tr ng-repeat="job in jobs">
 <td>
-<a href="getJobDetail/{{job.jobId}}">{{job.jobTitle}}</a>
+<a href="" ng-click="getJobDetail(job.jobId)" >{{job.jobTitle}}</a>
 </td>
 </tr>
 </table>
+<div ng-show="showJobDetail">
+<B>Job Details</B> <BR>
+TITLE: 
+{{jobDetail.jobTitle}}<br>
+JOB DESCRIPTION: 
+{{jobDetail.jobDescription}}<br>
+SKILLS REQUIRED:
+{{jobDetail.skillsRequired}}<br>
+SALARY
+{{jobDetail.salary}}
+<br>
+LOCATION
+{{jobDetail.location}}<br>
+</div>
+<a href="#/home"> Home page</a>
+
 </body>
+
 </html>
