--- a/proj2frontend/WebContent/index.html
+++ b/proj2frontend/WebContent/index.html
@@ -50,11 +50,13 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						  </button>
-						   <a class="navbar-brand" href="index.html"><span>W.T.F </span>world tech forum</a>
+						   <a class="navbar-brand" href="index.html"><span>W.T.F. </span>world tech forum</a>
 						</div>
 						<div class="sign-in">
 						 <span class="glyphicon glyphicon-user"> welcome {{currentUser.username}} </span></div>
-
+<!-- <ul><li ng-show="currentUser.id"> -->
+<!-- 						<a href=""><img src="http://localhost:8090/backend/resources/images/{{currentUser.username}}"  width="5%" height="5%"></a></li> -->
+<!-- </ul> -->
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 						 <ul class="nav navbar-nav">
@@ -68,7 +70,11 @@
 							<li><a href="#/postJob" 
 			 ng-show="currentUser.role=='ADMIN' || currentUser.role=='EMPLOYEE'">Post Job</a></li>
 						</ul></li>
+						<li  ng-show="currentUser.id">
+		<a href="#/uploadPicture" >Upload Picture</a>
+</li>
 							<li class="hvr-bounce-to-bottom"><a href="contact.html">Contact Us</a></li>
+							
 						  </ul>
 						  <div class="sign-in">
 							<ul>
@@ -109,7 +115,7 @@
 <!-- //footer -->
 <!-- for bootstrap working -->
 		<script type="text/javascript"
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script type="text/javascript"
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.js"></script>
 <script type="text/javascript"
