--- a/proj2frontend/WebContent/_friend/pendingRequest.html
+++ b/proj2frontend/WebContent/_friend/pendingRequest.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-Pending Requests 
+Pending Requests {{p.fromId}}
 <table>
 <tr ng-repeat="p in pendingRequest">
 <td>{{p.fromId}}</td>
