friend and blog completed and working

--- a/proj2frontend/WebContent/_friend/listOfFriends.html
+++ b/proj2frontend/WebContent/_friend/listOfFriends.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
+
+friends
 <table class="table table-striped">
 <tr ng-repeat="f in friends">
 <td>{{f.fromId}}</td>
