email service activated

--- a/proj2frontend/WebContent/_friend/listOfFriends.html
+++ b/proj2frontend/WebContent/_friend/listOfFriends.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div class="container">
+<div class="banner">
 
 friends
 <table class="table table-striped">
@@ -14,5 +16,6 @@ friends
 <td><a href="" ng-click="" class="btn btn-default">chat</a></td>
 </tr>
 </table>
+</div></div>
 </body>
 </html>
