--- a/proj2frontend/WebContent/_home/home.html
+++ b/proj2frontend/WebContent/_home/home.html
@@ -5,8 +5,26 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div class="banner-body">
+		<div class="container">
+<!-- header -->
+			<div class="header">
+			<div class="header-bottom">
+		<div class="header-bottom-top">
+			
+		</div>
+		<div class="clearfix"> </div>
+<!-- banner -->
+		<div class="banner">
 <div  ng-show="currentUser.id">
 						<a href=""><img src="http://localhost:8090/backend/resources/images/{{currentUser.username}}"  class="img-circle" width="25%" height="25%"></a>
-						<span class="glyphicon glyphicon-user"> welcome {{currentUser.username}}</div>					
+						<span class="glyphicon glyphicon-user"> welcome {{currentUser.username}}</div>		
+						
+						</div>
+						</div>
+						</div>		
+						</div>
+						</div>
+						
 </body>
 </html>
