--- a/proj2frontend/WebContent/_user/listOfUsers.html
+++ b/proj2frontend/WebContent/_user/listOfUsers.html
@@ -7,8 +7,15 @@
 <body>
 List of Users
 <div class="table table-striped">
-<table>
-<tr><th>USERNAME</th><th>EMAIL</th><th>ISONLINE</th><th>ROLE</th></tr>
+<table  class="table table-striped">
+<thead>
+<tr>
+<th>USERNAME</th>
+<th>EMAIL</th>
+<th>ISONLINE</th>
+<th>ROLE</th>
+</tr></thead>
+ <tbody>
 <tr ng-repeat="u in users">
 <td>{{u.username}}</td>
 <td>{{u.email}}</td>
@@ -18,6 +25,7 @@ List of Users
 <td>{{u.role}}</td>
 <td><a href="" ng-click="friendRequest(u.username)" class="btn btn-xs btn-default" >Send Friend Request</a></td>
 </tr>
+</tbody>
 </table>`
 </div>
 <a href="#/home">Home</a>
