--- a/proj2frontend/WebContent/_job/createJob.html
+++ b/proj2frontend/WebContent/_job/createJob.html
@@ -5,8 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div class="login">
 <form>
-<table>
+<table class="table table-striped">
 <tr>
 <td>Job Title</td>
 <td><input type="text" ng-model="job.jobTitle"></td>
@@ -40,5 +41,6 @@
 </table>
 
 </form>
+</div>
 </body>
 </html>
