--- a/proj2frontend/WebContent/_job/jobTitles.html
+++ b/proj2frontend/WebContent/_job/jobTitles.html
@@ -5,7 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<table>
+<div class="login">
+<table class="table table-striped">
+
 <tr>
 <th>Job Title</th>
 </tr>
@@ -30,7 +32,7 @@ LOCATION
 {{jobDetail.location}}<br>
 </div>
 <a href="#/home"> Home page</a>
-
+</div>
 </body>
 
 </html>
