--- a/proj2frontend/WebContent/_user/uploadPicture.html
+++ b/proj2frontend/WebContent/_user/uploadPicture.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<div align="center">
+<div class="login">
         <form method="post" action="http://localhost:8090/backend/doUpload" enctype="multipart/form-data">
             <table border="0">
                 <tr>
