--- a/proj2frontend/WebContent/_blog/newPost.html
+++ b/proj2frontend/WebContent/_blog/newPost.html
@@ -5,13 +5,15 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div class="login">
 <form>
-<table>
+<table class="table table-striped">
 <tr><td>Enter the title</td><td><input type="text" ng-model="blogPost.title"></td></tr>
 <tr><td>Content</td><td><textarea rows="10"  ng-model="blogPost.body"></textarea></td></tr>
 <tr><td><input type="submit" ng-click="submit()"></td></tr>
 </table>
 
 </form>
+</div>
 </body>
 </html>
