--- a/proj2frontend/WebContent/index.html
+++ b/proj2frontend/WebContent/index.html
@@ -167,6 +167,6 @@
 	<script type="text/javascript" src="_blog/blogservice.js"></script>
 	<script type="text/javascript" src="_blog/blogcontroller.js"></script>
 	<script type="text/javascript" src="_blog/blogdetailcontroller.js"></script>
-><!-- //for bootstrap working -->
+<!-- //for bootstrap working -->
 </body>
 </html>
