--- a/proj2frontend/WebContent/index.html
+++ b/proj2frontend/WebContent/index.html
@@ -18,19 +18,19 @@
 <!-- //for-mobile-apps -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script>
+<!-- <script src="js/jquery-1.11.1.min.js"></script> -->
 <!-- //js -->
 <!-- start-smoth-scrolling -->
 <!-- <script type="text/javascript" src="js/move-top.js"></script> -->
 <!-- <script type="text/javascript" src="js/easing.js"></script> -->
-<script type="text/javascript">
-	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
-			event.preventDefault();
-			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-		});
-	});
-</script>
+<!-- <script type="text/javascript"> 
+<!-- // 	jQuery(document).ready(function($) { -->
+<!-- // 		$(".scroll").click(function(event){		 -->
+<!-- // 			event.preventDefault(); -->
+<!-- // 			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000); -->
+<!-- // 		}); -->
+<!-- // 	}); -->
+<!-- </script> -->
 <!-- start-smoth-scrolling -->
 </head>
 	
@@ -50,7 +50,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						  </button>
-						   <a class="navbar-brand" href="index.html"><span>W.T.F.</span>world tech forum</a>
+						   <a class="navbar-brand" href="#/home"><span>W.T.F.</span>world tech forum</a>
 						</div>
 						
 <!-- 						<div class="sign-in"> -->
