--- a/proj2frontend/WebContent/_user/login.html
+++ b/proj2frontend/WebContent/_user/login.html
@@ -12,7 +12,7 @@
 					 <p>Welcome, please enter the following to continue.</p>
 					 <p>If you have previously Login with us, <a href="#">click here</a></p>
 					 <form>
-					  <p class="text-danger">{{message}}</p>
+					  <p class="text-danger">{{dirty.message}}</p>
 						 <h5>User Name:</h5>	
 						 <input type="text" ng-model="user.username">
 						 <h5>Password:</h5>
