--- a/proj2frontend/WebContent/index.html
+++ b/proj2frontend/WebContent/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +16,8 @@
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/animate.css" rel="stylesheet" type="text/css" media="all" />
+
 <!-- js -->
 <!-- <script src="js/jquery-1.11.1.min.js"></script> -->
 <!-- //js -->
@@ -34,7 +35,7 @@
 <!-- start-smoth-scrolling -->
 </head>
 	
-<body ng-app="myApp">
+<body  ng-app="myApp">
 <!-- banner-body -->
 	<div class="banner-body">
 		<div class="container">
@@ -50,12 +51,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						  </button>
-						   <a class="navbar-brand" href="#/home"><span>W.T.F.</span>world tech forum</a>
+						   <a class="navbar-brand animated rollIn" href="#/home"><span>W.T.F.</span>world tech forum</a>
 						</div>
 						
-<!-- 						<div class="sign-in"> -->
-<!-- 						 <span class="glyphicon glyphicon-user"> welcome {{currentUser.username}} -->
-<!-- 						  </span></div> -->
+
 
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
@@ -104,19 +103,11 @@
 								
 							</ul>
 							</div>
-						</div><!-- /.navbar-collapse -->
+						</div>
 					</nav>
 				</div>
 	
-			<!-- search-scripts -->
-<!-- 			<script src="js/classie.js"></script> -->
-<!-- 			<script src="js/uisearch.js"></script> -->
-<!-- 				<script> 			new UISearch( document.getElementById( 'sb-search' ) );
-<!-- 				</script> -->
-			<!-- //search-scripts -->
-			</div>
-<!-- //header -->
-<!-- header-bottom -->
+		
 	<div class="container">
 		<div ng-view></div>
 
